RESOLVED FIXED175975
Cannot change audio input source device
https://bugs.webkit.org/show_bug.cgi?id=175975
Summary Cannot change audio input source device
Lee Ho
Reported 2017-08-24 19:03:44 PDT
When changing the audio input device, changes do not take effect. For example, if the initial device is the built-in microphone, after changing the input to an external USB Logitech HD Pro Webcam C920, the audio is still captured from the built-in microphone. This is observed in BlueJeans, appear.in, and also the WebRTC sample code for device selection: https://webrtc.github.io/samples/src/content/devices/input-output/ This was observed in the following Safari versions: Safari 11 for macOS Sierra beta 6, Version 11.0 (12604.1.38.1.6) Safari Technology Preview Release 38 (Safari 11.1, WebKit 12605.1.3.1)
Attachments
Patch (2.35 KB, patch)
2018-03-09 12:02 PST, youenn fablet
no flags
Patch (2.42 KB, patch)
2018-03-09 12:11 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2017-08-24 19:11:54 PDT
Chad Phillips
Comment 2 2017-11-16 21:29:44 PST
Confirming this is still an issue with latest Safari release (Version 11.0.1 (12604.3.5.1.1))
Elliot
Comment 3 2018-03-05 15:00:40 PST
Confirming this is still an issue with latest Safari release Version 11.0.3 (12604.5.6.1.1)
Ryan Rowland
Comment 4 2018-03-06 13:44:08 PST
Still seems to be an issue in release 50 (11.2) JSFiddles reproducing this issue (both require two available input devices to run): https://jsfiddle.net/4xnr6svv/46/ - Two streams with different device IDs open simultaneously https://jsfiddle.net/0kxwm0e9/6/ - Two devices, alternating closing / getting new stream every 4 seconds. In both cases, the audio tracks returned by getUserMedia has the audio from the system's default device.
youenn fablet
Comment 5 2018-03-09 12:02:33 PST
youenn fablet
Comment 6 2018-03-09 12:11:25 PST
WebKit Commit Bot
Comment 7 2018-03-09 13:15:03 PST
Comment on attachment 335446 [details] Patch Clearing flags on attachment: 335446 Committed r229479: <https://trac.webkit.org/changeset/229479>
WebKit Commit Bot
Comment 8 2018-03-09 13:15:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.