Cannot change audio input source device https://bugs.webkit.org/show_bug.cgi?id=175975 <rdar://problem/34073589>

Reviewed by Eric Carlson.

Covered by manually testing https://webrtc.github.io/samples/src/content/devices/input-output/ with a USB web cam.

* platform/mediastream/mac/CoreAudioCaptureSource.cpp:
(WebCore::CoreAudioSharedUnit::setCaptureDeviceID):
(WebCore::CoreAudioCaptureSource::CoreAudioCaptureSource):


Canonical link: https://commits.webkit.org/199181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229479 268f45cc-cd09-0410-ab3c-d52691b4dbfc